[package]
name = "metro-display"
version = "0.1.0"
edition = "2021"

[dependencies]
rpi-led-matrix = "0.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"